# PyMieSim

./: .buildinfo  .coverage  .coveragerc  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CMakeCache.txt  CMakeLists.txt  Dockerfile  Jenkinsfile  Jenkinsfile.yaml  LICENSE  MANIFEST.in  MakeWheel.yml  Makefile  MieSIm.ipynb  MieSim.ipynb  PyMieSim.ipynb  README.md  README.rst  Untitled.ipynb  __init__.py  cmake_install.cmake  code.html  codecov.yml  data.json  dependabot.yml  endpoint.json  genindex.html  index.html  jenkinsfile  makefile  meta.yaml  notebook.ipynb  objects.inv  (+17 more)
PyMieSim/cpp/_bessel/: CMakeLists.txt  bessel_subroutine.cpp  bessel_subroutine.h
PyMieSim/cpp/bessel/: CMakeLists.txt  complex_bessel.cpp
PyMieSim/cpp/bessel/complex_bessel_bits/: besselFunctions.cpp  errors.cpp  sph_besselFunctions.cpp  utilities.cpp
PyMieSim/cpp/bessel_subroutine/: CMakeLists.txt  amos_iso.h  bessel_subroutine.h  cmake_install.cmake  errors.cpp  fortran_linkage.cpp
PyMieSim/cpp/coordinates/: CMakeLists.txt  cmake_install.cmake  coordinates.cpp  coordinates.h  interface.cpp
PyMieSim/cpp/cylinder/: CMakeLists.txt  cylinder.cpp  cylinder.h  interface.cpp
PyMieSim/cpp/detector/: CMakeLists.txt  HG_modes.h  LG_modes.cpp  LG_modes.h  LP_modes.cpp  LP_modes.h  detector.cpp  detector.h  interface.cpp
PyMieSim/cpp/experiment/: CMakeLists.txt  base_set.h  experiment.cpp  experiment.h  interface.cpp  utils.h  utils_set.h
PyMieSim/cpp/experiment/detector_set/: CMakeLists.txt  cmake_install.cmake  detector_set.cpp  detector_set.h  interface.cpp
PyMieSim/cpp/experiment/headers/: experiment.h
PyMieSim/cpp/experiment/includes/: _coreshell.cpp  _cylinder.cpp  _sphere.cpp  coreshell.cpp  cylinder.cpp  experiment.cpp  scatterer_properties.cpp  sets.cpp  sphere.cpp
PyMieSim/cpp/experiment/interface/: experiment.cpp  scatterer_properties.cpp  sets.cpp
PyMieSim/cpp/experiment/material_set/: CMakeLists.txt  cmake_install.cmake  interface.cpp  material_set.h  medium_set.cpp  medium_set.h
PyMieSim/cpp/experiment/polarization_set/: CMakeLists.txt  cmake_install.cmake  interface.cpp  polarization_set.h
PyMieSim/cpp/experiment/scatterer_set/: CMakeLists.txt  base_set.h  cmake_install.cmake  core_shell_set.cpp  core_shell_set.h  cylinder_set.cpp  cylinder_set.h  interface.cpp  sphere_set.cpp  sphere_set.h
PyMieSim/cpp/experiment/sets/: CMakeLists.txt  base_set.h  detector.h  interface.cpp  scatterer.h  sequential_broadcast.h  sets.cpp  source.h
PyMieSim/cpp/experiment/setup/: CMakeLists.txt  cmake_install.cmake  interface.cpp  setup.cpp  setup.h
PyMieSim/cpp/experiment/source_set/: CMakeLists.txt  cmake_install.cmake  interface.cpp  source_set.cpp  source_set.h
PyMieSim/cpp/fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  interface.cpp
PyMieSim/cpp/full_mesh/: CMakeLists.txt  full_mesh.cpp  full_mesh.h
PyMieSim/cpp/material/: CMakeLists.txt  base.h  cmake_install.cmake  constant.h  interface.cpp  material.cpp  material.h  sellmeier.h  tabulated.h
PyMieSim/cpp/mesh/: CMakeLists.txt  cmake_install.cmake  fibonacci.cpp  fibonacci.h  full_mesh.h  interface.cpp
PyMieSim/cpp/mode_field/: CMakeLists.txt  HG_modes.h  LG_modes.h  LP_modes.h  interface.cpp  mode_field.cpp  mode_field.h
PyMieSim/cpp/pint/: CMakeLists.txt  cmake_install.cmake  interface.cpp  pint.cpp  pint.h
PyMieSim/cpp/scatterer/: CMakeLists.txt  base_scatterer.cpp  base_spherical_scatterer.cpp  interface.cpp
PyMieSim/cpp/scatterer/base_scatterer/: CMakeLists.txt  base_scatterer.cpp  base_scatterer.h  interface.cpp
PyMieSim/cpp/scatterer/coreshell/: CMakeLists.txt  coreshell.cpp  coreshell.h  interface.cpp
PyMieSim/cpp/scatterer/cylinder/: CMakeLists.txt  cylinder.cpp  cylinder.h  interface.cpp
PyMieSim/cpp/scatterer/sphere/: CMakeLists.txt  interface.cpp  sphere.cpp  sphere.h
PyMieSim/cpp/sets/: CMakeLists.txt  base.cpp  base.h  base_set.h  detector.cpp  detector.h  interface.cpp  properties.h  scatterer.cpp  scatterer.h  sets.cpp  source.cpp  source.h
PyMieSim/cpp/single/: CMakeLists.txt  interface.cpp  utils.h
PyMieSim/cpp/single/coordinates/: CMakeLists.txt  coordinates.cpp  interface.cpp
PyMieSim/cpp/single/detector/: CMakeLists.txt  base.h  cmake_install.cmake  coherent_mode.h  detector.cpp  detector.h  detector__.cpp  detector__.h  integrating_sphere.h  interface.cpp  photodiode.h
PyMieSim/cpp/single/dispersive_material/: CMakeLists.txt  interface.cpp  material.h
PyMieSim/cpp/single/fibonacci/: CMakeLists.txt  fibonacci.h  interface.cpp
PyMieSim/cpp/single/full_mesh/: CMakeLists.txt  full_mesh.cpp  full_mesh.h  interface.cpp
PyMieSim/cpp/single/headers/: HG_modes.h  LG_modes.h  LP_modes.h  core_shell.h  coreshell.h  cylinder.h  detectors.h  fibonacci_mesh.h  sources.h  sphere.h
PyMieSim/cpp/single/includes/: base_class.cpp  base_spherical_scatterer.cpp  core_shell.cpp  coreshell.cpp  cylinder.cpp  detectors.cpp  fibonacci_mesh.cpp  full_mesh.cpp  sphere.cpp
PyMieSim/cpp/single/interface/: coreshell.cpp  cylinder.cpp  detector.cpp  mesh.cpp  mode_field.cpp  source.cpp  sphere.cpp
PyMieSim/cpp/single/material/: CMakeLists.txt  interface.cpp  material.h  medium.h
PyMieSim/cpp/single/mode_field/: CMakeLists.txt  cmake_install.cmake  interface.cpp  mode_field.cpp  mode_field.h
PyMieSim/cpp/single/optical_interface/: CMakeLists.txt  cmake_install.cmake  interface.cpp  optical_interface.cpp  optical_interface.h
PyMieSim/cpp/single/polarization/: CMakeLists.txt  interface.cpp  polarization.cpp  polarization.h
PyMieSim/cpp/single/scatterer/: CMakeLists.txt  cmake_install.cmake  interface.cpp  utils.h
PyMieSim/cpp/single/setup/: CMakeLists.txt  cmake_install.cmake  interface.cpp  setup.cpp  setup.h
PyMieSim/cpp/single/setup_single/: CMakeLists.txt  interface.cpp  setup_single.cpp  (+1 more)
PyMieSim/cpp/source/: CMakeLists.txt  interface.cpp  source.cpp  source.h
PyMieSim/cpp/sphere/: CMakeLists.txt  interface.cpp  sphere.cpp  sphere.h
development/deprecated/sets/: CMakeLists.txt  interface.cpp
(+23737 files in other folders)
