[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools_scm[toml]>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "INFO"
wheel.exclude = ["PyMieSim/cpp"]
install.strip = false
sdist.include = ["PyMieSim/binary/*"]
sdist.exclude = [
    "tests",
    "docs",
    ".git*",
    "developments",
]

[tool.setuptools_scm]
write_to = "PyMieSim/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project]
name = "PyMieSim"
dynamic = ["version"]
description = "A package for light scattering computation."
license = { file = "LICENSE" }
readme = "README.rst"
urls = {"Documentation" = "https://martinpdes.github.io/PyMieSim/", "Repository" = "https://github.com/MartinPdeS/PyMieSim"}
requires-python = ">=3.10"
authors = [
    { name = "Martin Poinsinet de Sivry-Houle", email = "martin.poinsinet.de.sivry@gmail.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Framework :: Sphinx"
]

dependencies = [
    "setuptools_scm[toml] >=8,<10",
    "numpy ==2.2.6",
    "matplotlib ==3.10.5",
    "MPSPlots ==1.6.4",
    "pydantic >=2.9.2,<2.12.0",
    "pint-pandas ~=0.6",
    "pandas ~=2.3.0",
    "PyOptik ==1.12.0",
    "tabulate ~=0.9",
    "pyvista ==0.45.3",
    "TypedUnit"
]

# Keywords for better discoverability
keywords = [
    "mie", "scattering", "backscatter", "sphere", "cylinder", "nanoparticle",
    "phase function", "efficiency", "rayleigh", "backscattering"
]

[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report==1.5.0",
    "coverage==7.10.4"
]
documentation = [
    "numpydoc==1.9.0",
    "sphinx>=5.1.1",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-gallery==0.19.0",
    "pydata-sphinx-theme==0.16.1"
]
dev = [
    "flake8==7.3.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level = "INFO"
addopts = [
    "-v", "-rA", "-rw", "--cov=PyMieSim", "--cov-report=html", "--cov-report=term"
]
testpaths = [
    "tests/single/*",
    "tests/experiment/*",
    "tests/validation/*",
    "tests/extra/*"
]

[tool.cibuildwheel]
build-frontend = "build"
before-test = ""
test-command = "python -m pytest -rA {project}/tests --ignore={project}/tests/gui"
test-extras = ["testing"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp310-manylinux*", "cp311-manylinux*", "cp312-manylinux*", "cp313-manylinux*"]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-build = "python -c 'import pyvista; pyvista.start_xvfb()'"

[tool.cibuildwheel.macos]
archs = ["arm64"]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*"]

[tool.coverage.run]
source = ["PyMieSim"]
omit = [
    "PyMieSim/gui/*",
    "*__init__.py",
    "PyMieSim/__main__.py",
    "PyMieSim/_version.py",
    "PyMieSim/directories.py"
]
branch = true
relative_files = true
