[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "setuptools_scm[toml]>=8.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = ".skbuild/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
logging.level = "INFO"
wheel.exclude = ["PyMieSim/cpp"]
install.strip = false
sdist.include = ["PyMieSim/binary/*"]
sdist.exclude = [
    "tests",
    "docs",
    ".git*",
    "developments",
]

[tool.setuptools_scm]
write_to = "PyMieSim/_version.py"
version_scheme = "only-version"
local_scheme = "no-local-version"

[project]
name = "PyMieSim"
dynamic = ["version"]
description = "A package for light scattering (Mie) computation."
license = { file = "LICENSE" }
readme = "README.rst"
urls = {"Documentation" = "https://martinpdes.github.io/PyMieSim/", "Repository" = "https://github.com/MartinPdeS/PyMieSim"}
requires-python = ">=3.10"
authors = [
    { name = "Martin Poinsinet de Sivry-Houle", email = "martin.poinsinet.de.sivry@gmail.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Jupyter",
    "Framework :: Sphinx"
]

dependencies = [
    "TypedUnit",
    "MPSPlots",
    "PyOptik",
    "setuptools_scm[toml] >=8,<10",
    "numpy ==2.2.6",
    "matplotlib ==3.10.7",
    "pydantic >=2.9.2,<2.13.0",
    "pint-pandas ~=0.6",
    "pandas ~=2.3.0",
    "tabulate ~=0.9",
    "pyvista ==0.45.3",
]

keywords = [
    "mie",
    "scattering",
    "backscatter",
    "sphere",
    "cylinder",
    "nanoparticle",
    "phase function",
    "efficiency",
    "rayleigh",
    "backscattering"
]

[project.optional-dependencies]
testing = [
    "pytest>=0.6",
    "pytest-cov>=2.0",
    "pytest-json-report==1.5.0",
    "coverage==7.11.0",
]
documentation = [
    "numpydoc==1.9.0",
    "sphinx>=5.1.1",
    "sphinx-rtd-theme==3.0.2",
    "sphinx-gallery==0.19.0",
    "sphinx_design==0.6.1",
    "pydata-sphinx-theme==0.16.1"
]
dev = [
    "flake8==7.3.0"
]

[tool.cibuildwheel]
build-frontend = "build"
test-extras = ["testing"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp311-manylinux*", "cp312-manylinux*", "cp313-manylinux*"]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
test-command = "cd {project}; python -m pytest --config-file=pytest.ini --ignore=tests/extra/test_system_plot.py --ignore=tests/single/representation.py"

[tool.cibuildwheel.macos]
archs = ["arm64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
repair-wheel-command = "delocate-wheel -w {dest_dir} -v {wheel}"  # --exclude=libomp.dylib
test-command = 'cd {project}; python -m pytest --config-file=pytest.ini'  # DYLD_PRINT_LIBRARIES=NO

[tool.cibuildwheel.windows]
archs = ["AMD64"]
build = ["cp311-*", "cp312-*", "cp313-*"]
test-command = 'cd /d {project} && python -m pytest --config-file=pytest.ini'
