[metadata]
name = PyMieSim
description = A package for light scattering computation.
keywords =
    mie
    scattering
    backscatter
    sphere
    cylinder
    nanoparticle
    phase function
    efficiency
    rayleigh
    backscattering

version = file: PyMieSim/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx
url = https://github.com/MartinPdeS/PyMieSim
license = MIT
license_files = LICENSE
readme = README.rst
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering :: Physics
        License :: OSI Approved :: MIT License
        Intended Audience :: Science/Research


[options]
include_package_data = True
packages = find:
python_requires >= 3.8

setup_requires =
        setuptools
        numpy
        wheel

install_requires =
        MPSPlots
        numpy
        scipy
        matplotlib
        DataVisual
        PyOptik
        pyvista


[sdist]
formats = zip, gztar

[options.package_data]
* = *.npy, *.so


[options.extras_require]
development =
        numpydoc==1.5.0
        sphinx>=5.1.1
        sphinx-gallery>=0.11.1
        sphinx-rtd-theme>=1.0.0
        pydata-sphinx-theme
        pymiescatt
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        flake8>=3.9
        coverage

documentation =
        numpydoc==1.5.0
        sphinx>=5.1.1
        sphinx-gallery>=0.11.1
        sphinx-rtd-theme>=1.0.0
        pydata-sphinx-theme

validation =
        pymiescatt

testing =
        pytest>=0.6
        pytest-cov>=2.0
        pytest-json-report
        flake8>=3.9
        coverage


[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605

exclude =
    .git,
    __pycache__,
    docs

include =
        PyMieSim


