[metadata]
name = PyMieSim
description = A package for light scattering computation.
keywords =
    mie
    scattering
    backscatter
    sphere
    cylinder
    nanoparticle
    phase function
    efficiency
    rayleigh
    backscattering

version = file: PyMieSim/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx
url = https://github.com/MartinPdeS/PyMieSim
license = MIT
license_files = LICENSE
readme = README.rst
documentation = https://pymiesim.readthedocs.io/
classifiers =
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: Implementation :: CPython
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering :: Physics
        License :: OSI Approved :: MIT License
        Intended Audience :: Science/Research

[options]
packages = find_namespace:
include_package_data = True
python_requires >= 3.8
install_requires = file: requirements/requirements.txt
setup_requires =
        setuptools>=69.0.2
        numpy

[options.package_data]
PyMieSim.lp_modes = PyMieSim/lp_modes/*/*.npy
validation_data = PyMieSim/validation_data/*.csv

[options.packages.find]
exclude =
    extern
    docs
    tests

[options.extras_require]
development = file: requirements/requirements-development.txt
documentation = file: requirements/requirements-documentation.txt
testing = file: requirements/requirements-testing.txt

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605

[tool:pytest]
minversion = 6.0
addopts = -ra -q -v
testpaths = tests

[coverage:run]
source = PyMieSim
omit =
    PyMieSim/validation_data/*
    PyMieSim/lp_modes/*
    PyMieSim/binary/*
    PyMieSim/cpp/*
    PyMieSim/tools/special_functions.py

[sdist]
formats = zip, gztar