[metadata]
name = PyMieSim
description = A package for light scattering computation.
keywords =
    mie
    scattering
    backscatter
    sphere
    cylinder
    nanoparticle
    phase function
    efficiency
    rayleigh
    backscattering

version = file: PyMieSim/VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martin Poinsinet de Sivry
author_email = Martin.poinsinet.de.sivry@gmail.com
platforms = unix, linux, osx
url = https://github.com/MartinPdeS/PyMieSim
license = MIT
license_files = LICENSE
readme = README.rst
documentation = https://pymiesim.readthedocs.io/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Physics
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research

[options]
packages = find_namespace:
include_package_data = True
python_requires >= 3.8

install_requires =
    numpy>=1.26.0
    scipy==1.11.3
    matplotlib==3.8.2
    DataVisual==1.3.1
    PyOptik==0.7.4
    tabulate==0.9.0

setup_requires =
    setuptools>=69.0.2
    numpy>=1.26.0

[options.extras_require]
documentation =
    numpydoc==1.6.0
    sphinx>=5.1.1
    sphinx-gallery==0.15.0
    sphinx-rtd-theme==2.0.0
    pydata-sphinx-theme==0.14.1
    PyMieScatt==1.8.1.1

testing =
    pytest>=0.6
    pytest-cov>=2.0
    pytest-json-report==1.5.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    coverage==6.5.0
    PyMieScatt==1.8.1.1

[options.packages.find]
exclude =
    extern
    docs
    tests

[flake8]
max-line-length = 200
per-file-ignores = __init__.py:F401
ignore = W605

[coverage:run]
source = PyMieSim
omit =
    PyMieSim/validation_data/*
    PyMieSim/lp_modes/*
    PyMieSim/binary/*
    PyMieSim/cpp/*
    PyMieSim/tools/special_functions.py

[sdist]
formats = zip, gztar